Estilizando e colocando botões javascript

--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>Vinhacity</title>
     <link rel="stylesheet" href="./styles.css"
 </head>
-<body>
+<body id="body">
+    <div class="container_menu">
+        <button onclick="modoEscuro()" class="botao_modo_escuro">Modo escuro</button>
+        <button onclick="modoBordo()" class="botao_modo_bordo" >Modo bordô</button>
+        <button onclick="modoNoite()" class="botao_modo_noite">Modo noite</button>
+    </div>
     <div class="menu">
         <img src="./img/logo.png">
+        
         <ul>
             <li><a href="/pages/sobre.html"><li>Sobre nós</li></a>
             <li><a href="/pages/contato.html"><li>Contato</li></a>
             <li><a href="/pages/quiz.html"><li>Quiz</li></a>
         </ul>
     </div>
+
     <div class="container">
        
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
