--- a/pages/contato.html
+++ b/pages/contato.html
@@ -24,7 +24,17 @@
     </div>
 
     <div class="container">
-       
+       <form class="formulario">
+            <label for="nome">Insira seu nome completo:</label> 
+            <input type="text" id="nome" name="nome"> <br>
+            <label for="telefone">Insira seu telefone:</label> 
+            <input type="text" id="telefone" name="telefone"><br>
+            <label for="email">Insira seu email:</label>
+            <input type="text" id="email" name="email"><br>
+            
+       </form>
+       <br>
+       <button>Enviar</button>
     </div>
     <script src="../scripts/script_contato.js"></script>
 </body>
